[package]
name = "file-transfer"
version = "0.1.0"
authors = ["jam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
aes = "0.5.0"
block-modes = "0.6.1"
rand = "0.7.3"
sha2 = "0.9.1"
hmac = "0.9.0"
thiserror = "1.0.20"
clap = "2.33.3"
log = "0.4.11"
env_logger = "0.7.1"